<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/house"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfilhome"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_ubicaciones"
            android:icon="@drawable/location"
            android:title="@string/menu_ubicaciones" />
 
    </group>

    <item android:title="@string/otros">
        <menu>

            <item
                android:id="@+id/nav_soporte"
                android:icon="@drawable/soporte"
                android:title="@string/menu_soporte" />
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/salida"
                android:title="@string/menu_cerrar_sesion" />
        </menu>
    </item>

</menu>
